<resources>
    <string name="app_name">Restaurant Roulette</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="company_logo">Company Logo</string>
    <string name="name">Name</string>
    <string name="create_account">Create Account</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="sign_up_fail">Could not register user.</string>
    <string name="login_failed">Sign in failed. Please try again.</string>
    <string name="food">Eat</string>
    <string name="drinks">Drink</string>
    <string name="explore">Explore</string>
</resources>
